# easy-oauth

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  python-package.yml
src/easy_oauth/: __init__.py  cap.py  manager.py  structs.py
src/easy_oauth/testing/: oauth_mock.py  utils.py
tests/: app.py  appconfig.yaml  caps.yaml  conftest.py  defaultcaps.yaml  noauthconfig.yaml  oauth_mock.py  prefixconfig.yaml  test_manager.py
